ajout de meeting pro et de cienfuegos

--- a/projects/catalattitude.html
+++ b/projects/catalattitude.html
@@ -395,6 +395,45 @@
     <h1 class="grostitre" style="color: #fecf0e">MEETING PRO</h1>
 
 
+<div class="MeetingPro">
+
+    <div class="camera-carousel-wrapper">
+        <img src="../img/Catal’attitude/MettingProAppareilPhoto.webp" alt="MettingProAppareilPhoto" class="camera-frame">
+        <div class="camera-carousel">
+            <div class="camera-track">
+                <div class="camera-slide"><img class="camera-img" src="../img/Catal’attitude/MeetingProapreilPhoto/IMG_2971.webp" alt=""></div>
+                <div class="camera-slide"><img class="camera-img" src="../img/Catal’attitude/MeetingProapreilPhoto/IMG_2957.webp" alt=""></div>
+                <div class="camera-slide"><img class="camera-img" src="../img/Catal’attitude/MeetingProapreilPhoto/IMG_2955.webp" alt=""></div>
+                <div class="camera-slide"><img class="camera-img" src="../img/Catal’attitude/MeetingProapreilPhoto/IMG_3015.webp" alt=""></div>
+                <div class="camera-slide"><img class="camera-img" src="../img/Catal’attitude/MeetingProapreilPhoto/IMG_3093.webp" alt=""></div>
+                <div class="camera-slide"><img class="camera-img" src="../img/Catal’attitude/MeetingProapreilPhoto/IMG_3097.webp" alt=""></div>
+            </div>
+            <div aria-hidden="true" class="camera-track">
+                <div class="camera-slide"><img class="camera-img" src="../img/Catal’attitude/MeetingProapreilPhoto/IMG_2971.webp" alt=""></div>
+                <div class="camera-slide"><img class="camera-img" src="../img/Catal’attitude/MeetingProapreilPhoto/IMG_2957.webp" alt=""></div>
+                <div class="camera-slide"><img class="camera-img" src="../img/Catal’attitude/MeetingProapreilPhoto/IMG_2955.webp" alt=""></div>
+                <div class="camera-slide"><img class="camera-img" src="../img/Catal’attitude/MeetingProapreilPhoto/IMG_3015.webp" alt=""></div>
+                <div class="camera-slide"><img class="camera-img" src="../img/Catal’attitude/MeetingProapreilPhoto/IMG_3093.webp" alt=""></div>
+                <div class="camera-slide"><img class="camera-img" src="../img/Catal’attitude/MeetingProapreilPhoto/IMG_3097.webp" alt=""></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="iphone">
+        <div class="textUnderPhone">
+            <img class="tel" src="../img/grizzlys/tel.webp" alt="">
+            <img class="video1 video" src="../img/Catal’attitude/MeetingProapreilPhoto/mettingProDate.webp" alt="calendrirer">
+            <p class="descriptionVideo">Story Instagram présentant les dates des prochaines réunions professionnelles</p>
+        </div>
+    </div>
+    <div class="divCreaGrid" style="width: 350px; height: 500px;">
+        <p class="textHover">Publication Instagram pour trouver des partenaires pour un prochain brunch.</p>
+        <img class="creaGrid" src="../img/Catal’attitude/MeetingProapreilPhoto/Post_Meeting_pro_recherche_partenaires.webp"
+             alt="Création Catal'attitude">
+    </div>
+</div>
+
+
     <footer>
         <nav class="footerNavbar">
             <div class="footerLogosLeft">
