--- a/projects/cienfuegos.html
+++ b/projects/cienfuegos.html
@@ -115,13 +115,26 @@
         <div class="videoDetailSection">
             <div class="detailLineCienfuegos"></div>
             <div class="detailContent">
-                <h2 class="detailTitle">RÉALISATION PRINT</h2>
+                <h2 class="detailTitle">VIDÉO TIKTOK</h2>
                 <p class="detailText">
                     C’est une tendance TikTok dont le but est de donner envie aux jeunes d’aller au festival, en
                     suggérant que l’ambiance était géniale, puisque les participantes annoncent qu’elles reviendront
                     l’année prochaine.
                 </p>
             </div>
+        </div>
+    </div>
+
+    <div class="concept-container">
+        <div class="concept-description">
+            <img src="../img/grizzlys/petiteFleche.webp" alt="petitefleche" class="concept-arrow">
+            <p class="concept-text">C'est un ensemble d'objets emblématiques de Cuba.
+                Qu'il faut disposer d'une manière spécifique dans les publications, les affiches, les stories...
+                C'est un peu comme le jeu "Où est Charli", cela permet d'attirer l'attention des spectateurs sur les visuels, mais aussi de créer une attente jusqu' au festival.</p>
+        </div>
+        <div class="concept-title-wrapper">
+            <p class="concept-title">Concept d'évocation</p>
+            <img src="../img/cienfuegos/petitTRUC.png" alt="petitTruc" class="concept-icon">
         </div>
     </div>
 
@@ -145,15 +158,21 @@
         </div>
     </div>
 
-    <!--<div>-->
-    <!--    <div>-->
-    <!--        <p>Voici plus en détaille mon équipe et notre stratégie</p>-->
-    <!--        p-->
-    <!--    </div>-->
-    <!--    <div>-->
+    <div class="audio-container">
+        <div class="audio-card" onclick="toggleAudio('audio1')">
+            <p class="audio-title">Spot radio</p>
+            <img src="../img/cienfuegos/ipod.webp" alt="ipod" class="audio-icon audio-play">
+            <img src="../img/cienfuegos/ipodPlay.webp" alt="ipod" class="audio-icon audio-pause">
+            <audio id="audio1" src="../img/cienfuegos/mp3/ScreenRecording_01-22-2026_10-51-21_1.mp3"></audio>
+        </div>
+        <div class="audio-card" onclick="toggleAudio('audio2')">
+            <p class="audio-title">Podcast</p>
+            <img src="../img/cienfuegos/ipod.webp" alt="ipod" class="audio-icon audio-play">
+            <img src="../img/cienfuegos/ipodPlay.webp" alt="ipod" class="audio-icon audio-pause">
+            <audio id="audio2" src="../img/cienfuegos/mp3/ScreenRecording_01-22-2026_10-43-50_1.mp3"></audio>
+        </div>
+    </div>
 
-    <!--    </div>-->
-    <!--</div>-->
 
     <footer>
         <nav class="footerNavbar">
@@ -179,8 +198,8 @@
         </nav>
     </footer>
 </div>
+<script src="../modal.js"></script>
 <script src="../data.js"></script>
 <script src="../script.js"></script>
 </body>
-</html>
 </html>
