--- a/projects/cienfuegos.html
+++ b/projects/cienfuegos.html
@@ -161,16 +161,51 @@
     <div class="audio-container">
         <div class="audio-card" onclick="toggleAudio('audio1')">
             <p class="audio-title">Spot radio</p>
-            <img src="../img/cienfuegos/ipod.webp" alt="ipod" class="audio-icon audio-play">
-            <img src="../img/cienfuegos/ipodPlay.webp" alt="ipod" class="audio-icon audio-pause">
+            <div class="ipod-wrapper">
+                <img src="../img/cienfuegos/ipod.webp" alt="ipod" class="audio-icon audio-play">
+                <img src="../img/cienfuegos/ipodPlay.webp" alt="ipod" class="audio-icon audio-pause">
+                <img src="../img/cienfuegos/radio.jpeg" alt="photo" class="ipod-screen">
+            </div>
             <audio id="audio1" src="../img/cienfuegos/mp3/ScreenRecording_01-22-2026_10-51-21_1.mp3"></audio>
         </div>
         <div class="audio-card" onclick="toggleAudio('audio2')">
             <p class="audio-title">Podcast</p>
-            <img src="../img/cienfuegos/ipod.webp" alt="ipod" class="audio-icon audio-play">
-            <img src="../img/cienfuegos/ipodPlay.webp" alt="ipod" class="audio-icon audio-pause">
+            <div class="ipod-wrapper">
+                <img src="../img/cienfuegos/ipod.webp" alt="ipod" class="audio-icon audio-play">
+                <img src="../img/cienfuegos/ipodPlay.webp" alt="ipod" class="audio-icon audio-pause">
+                <img src="../img/cienfuegos/podcast.jpeg" alt="photo" class="ipod-screen">
+                <p class="ipod-text">CIENFUEG’CAST</p>
+            </div>
             <audio id="audio2" src="../img/cienfuegos/mp3/ScreenRecording_01-22-2026_10-43-50_1.mp3"></audio>
         </div>
+    </div>
+
+    <div class="avion-container">
+        <img class="avion-light" src="../img/cienfuegos/telAvion1.webp" alt="avion">
+        <img class="avion-dark" src="../img/cienfuegos/telAvion2.webp" alt="avion">
+        <p class="avion-description">Réel Instagram pour faire découvrir l'univers de la bachata et donner envie au public de venir la découvrir et la tester lors du festival.</p>
+    </div>
+
+    <div class="diapo-container">
+        <div class="concept-description-container">
+            <img src="../img/grizzlys/petiteFleche.webp" alt="petitefleche" class="concept-arrow">
+            <p class="concept-text">Voici plus en détaille mon équipe et notre stratégie en cliquant sur l’ordinateur.</p>
+        </div>
+        <a href="https://www.canva.com/design/DAG0oa7zRTg/misrtJJqm2hP5fgPdFWcIg/view?utm_content=DAG0oa7zRTg&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h0c57b829d4"
+           target="_blank" class="lienOrdiCatalattitude">
+            <div class="ordi">
+                <img src="../img/catalattitude/ordi.webp" alt="ordiCienfuegos" class="imageOrdiCienfuegos">
+                <img src="../img/cienfuegos/Diaporama%20Cienfuegos.png" alt="aprendreoualaisser"
+                     class="imageAprendreoualaisser">
+
+            </div>
+        </a>
+    </div>
+
+    <div class="buttonStratégieAccent">
+        <a href="https://docs.google.com/document/d/1xHgFI3xPw49dV9A3fPVOsIf3kBuZ6vW6aTx4UWZPGj8/edit?tab=t.2ya5x0146vvv">
+            <button class="lienStratégieAccent">Lien Stratégie</button>
+        </a>
     </div>
 
 
