--- a/projects/vincenzo.html
+++ b/projects/vincenzo.html
@@ -95,7 +95,7 @@
         </div>
         <a href="https://wp48-c13540-1.educpda.fr" target="_blank" class="lienOrdiCatalattitude">
             <div class="ordiVincenzo">
-                <img src="../img/Catal’attitude/ordi.webp" alt="ordiCatalattitude" class="imageOrdiCatalattitude">
+                <img src="../img/catalattitude/ordi.webp" alt="ordiCatalattitude" class="imageOrdiCatalattitude">
                 <img src="../img/vincenzo/imageOrdi.png" alt="aprendreoualaisser"
                      class="imageOrdiVincenzo">
 
