--- a/projects/escapix.html
+++ b/projects/escapix.html
@@ -106,7 +106,7 @@
         </div>
         <div class="ordi">
             <p class="texteOrdi2" style="font-size: 25px">Visuel d'un site internet</p>
-            <img src="../img/Catal’attitude/ordi.webp" alt="ordiCatalattitude" class="imageOrdiCatalattitude">
+            <img src="../img/catalattitude/ordi.webp" alt="ordiCatalattitude" class="imageOrdiCatalattitude">
             <video class="imageAprendreoualaisser" autoplay loop muted playsinline>
                 <source src="../img/escapix/reco_finale_escapix_OnCom.mp4" type="video/mp4">
             </video>
