--- a/projects/grizzlys.html
+++ b/projects/grizzlys.html
@@ -216,6 +216,7 @@
             </div>
         </div>
     </div>
+    <h1 class="titreIdentite">Flyers</h1>
     <div class="flyers">
         <img class="imgFlyerGrizzlys1" src="../img/grizzlys/flyers1.webp" alt="Flyer Grizzlys Catalans">
         <img class="imgFlyerGrizzlys2" src="../img/grizzlys/flyers2.webp" alt="Flyer Grizzlys Catalans">
