--- a/project.html
+++ b/project.html
@@ -36,6 +36,10 @@
     </nav>
     <div id="projetContainer">
         <h1 class="titleProjectList">Mes Projets</h1>
+        <div class="divsubtitleMesProjet">
+            <h2 class="subtitleMesProjet">PRENEZ PLACE, LE VOYAGE AU COEUR DE MON UNIVERS COMMENCE MAINTENANT !</h2>
+            <img src="img/avionprojet.png" alt="avion" class="imgAvionProjet">
+        </div>
         <div id="projectPage">
             <!-- Les projets seront insérés ici par JavaScript -->
         </div>
