--- a/projects/casabicicleta.html
+++ b/projects/casabicicleta.html
@@ -111,11 +111,7 @@
                     <img src="../img/casbicicleta/roue.png" alt="roue" class="roue">
                 </div>
             </div>
-            <p class="descriptionRoue">Le visuel représente le vélo, le partage et la convivialité à travers une roue en
-                forme de cœur. Le rouge
-                évoque à la fois le logo et l’amour, dans lequel chacun peut se reconnaître. Les rayons rappellent ceux
-                du
-                soleil, symbole de joie de vivre et d’énergie positive de l’association.
+            <p class="descriptionRoue">Le visuel représente le vélo, le partage et la convivialité à travers une roue en forme de cœur. Le rouge évoque le logo et l’amour, tandis que les rayons rappellent le soleil, symbole de joie et d’énergie positive de l’association.
             </p>
         </div>
     </div>
