--- a/projects/cienfuegos.html
+++ b/projects/cienfuegos.html
@@ -183,13 +183,16 @@
     <div class="avion-container">
         <img class="avion-light" src="../img/cienfuegos/telAvion1.webp" alt="avion">
         <img class="avion-dark" src="../img/cienfuegos/telAvion2.webp" alt="avion">
-        <p class="avion-description">Réel Instagram pour faire découvrir l'univers de la bachata et donner envie au public de venir la découvrir et la tester lors du festival.</p>
+        <video class="avion-video" autoplay loop muted playsinline>
+            <source src="../img/cienfuegos/0123.mp4" type="video/mp4">
+        </video>
+        <p class="avion-description">Story Instagram pour faire découvrir l'univers de la bachata et donner envie au public de venir la découvrir et la tester lors du festival.</p>
     </div>
 
     <div class="diapo-container">
         <div class="concept-description-container">
-            <img src="../img/grizzlys/petiteFleche.webp" alt="petitefleche" class="concept-arrow">
-            <p class="concept-text">Voici plus en détaille mon équipe et notre stratégie en cliquant sur l’ordinateur.</p>
+            <img src="../img/grizzlys/petiteFleche.webp" alt="petitefleche" class="concept-arrow-ordi">
+            <p class="concept-text">Voici plus en détaille mon équipe et notre recommandation stratégique en cliquant sur l’ordinateur.</p>
         </div>
         <a href="https://www.canva.com/design/DAG0oa7zRTg/misrtJJqm2hP5fgPdFWcIg/view?utm_content=DAG0oa7zRTg&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h0c57b829d4"
            target="_blank" class="lienOrdiCatalattitude">
@@ -202,9 +205,9 @@
         </a>
     </div>
 
-    <div class="buttonStratégieAccent">
+    <div class="buttonStratégieCienfuegos">
         <a href="https://docs.google.com/document/d/1xHgFI3xPw49dV9A3fPVOsIf3kBuZ6vW6aTx4UWZPGj8/edit?tab=t.2ya5x0146vvv">
-            <button class="lienStratégieAccent">Lien Stratégie</button>
+            <button class="lienStratégieCienfuegos">Lien Stratégie</button>
         </a>
     </div>
 
