--- a/projects/escapix.html
+++ b/projects/escapix.html
@@ -105,8 +105,8 @@
 
         </div>
         <div class="ordi">
-            <p class="texteOrdi2" style="font-size: 25px">Visuel d'un site internet</p>
-            <img src="../img/catalattitude/ordi.webp" alt="ordiCatalattitude" class="imageOrdiCatalattitude">
+            <p class="texteOrdi2Escapix" style="font-size: 25px">Visuel d'un site internet</p>
+            <img src="../img/catalattitude/ordi.webp" alt="ordiCatalattitude" class="imageOrdiEscapix">
             <video class="imageAprendreoualaisser" autoplay loop muted playsinline>
                 <source src="../img/escapix/reco_finale_escapix_OnCom.mp4" type="video/mp4">
             </video>
