--- a/projects/cienfuegos.html
+++ b/projects/cienfuegos.html
@@ -183,7 +183,7 @@
     <div class="avion-container">
         <img class="avion-light" src="../img/cienfuegos/telAvion1.webp" alt="avion">
         <img class="avion-dark" src="../img/cienfuegos/telAvion2.webp" alt="avion">
-        <video class="avion-video" autoplay loop muted playsinline>
+        <video class="avion-video"  loop playsinline controls>
             <source src="../img/cienfuegos/0123.mp4" type="video/mp4">
         </video>
         <p class="avion-description">Story Instagram pour faire découvrir l'univers de la bachata et donner envie au public de venir la découvrir et la tester lors du festival.</p>
